<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_floor_1"
            android:icon="@drawable/ic_menu_floor_1"
            android:title="@string/_1st_floor" />
        <item
            android:id="@+id/nav_floor_2"
            android:icon="@drawable/ic_menu_floor_2"
            android:title="@string/_2nd_floor" />
        <item
            android:id="@+id/nav_floor_3"
            android:icon="@drawable/ic_menu_floor_3"
            android:title="@string/_3rd_floor" />
        <item
            android:id="@+id/nav_myGallery"
            android:icon="@drawable/ic_menu_my_gallery"
            android:title="@string/personal_gallery" />
    </group>


</menu>
